--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "tests"
   ],
   "devDependencies": {
-    "angular-material": "~0.5.1"
+    "angular-material": "~0.5.1",
+    "material-design-icons": "~1.0.1"
   }
 }
