--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,11 @@
   ],
   "devDependencies": {
     "angular-material": "~0.5.1",
-    "material-design-icons": "~1.0.1"
+    "material-design-icons": "~1.0"
+  },
+  "resolutions": {
+    "angular": "1.3.0-rc.4",
+    "angular-animate": "1.3.0",
+    "angular-aria": "1.3.0"
   }
 }
