--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "inbox-style-angular-material",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "license": "MIT",
   "ignore": [
     "**/.*",
@@ -10,12 +10,15 @@
     "tests"
   ],
   "devDependencies": {
-    "angular-material": "~0.5.1",
+    "angular-material": "~0.8.0",
     "material-design-icons": "~1.0"
   },
   "resolutions": {
-    "angular": "1.3.0-rc.4",
-    "angular-animate": "1.3.0",
-    "angular-aria": "1.3.0"
+    "angular": "1.3.x",
+    "angular-animate": "1.3.x",
+    "angular-aria": "1.3.x"
+  },
+  "dependencies": {
+    "hammerjs": "~2.0.4"
   }
 }
